--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@gorhom/bottom-sheet": "^4.5.1",
     "@react-navigation/native": "^6.0.2",
+    "@shopify/flash-list": "^1.6.1",
     "expo": "~49.0.13",
+    "expo-constants": "~14.4.2",
     "expo-font": "~11.4.0",
     "expo-linking": "~5.0.2",
     "expo-router": "^2.0.0",
@@ -26,14 +29,20 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-gesture-handler": "~2.12.0",
+    "react-native-maps": "^1.8.0",
+    "react-native-reanimated": "^3.5.4",
     "react-native-safe-area-context": "4.6.3",
     "react-native-screens": "~3.22.0",
-    "react-native-web": "~0.19.6"
+    "react-native-vector-icons": "^10.0.0",
+    "react-native-web": "~0.19.6",
+    "expo-updates": "~0.18.16"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.14",
+    "@types/react-native": "^0.72.3",
     "jest": "^29.2.1",
     "jest-expo": "~49.0.0",
     "react-test-renderer": "18.2.0",
